# docs-restate

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  generateOverview.js  loadScripts.js  package-lock.json  package.json  pnpm-lock.yaml
.claude/: settings.json
snippets/python/: README.md  pyproject.toml
snippets/python/src/ai/: error_handling.py
snippets/python/src/develop/: awakeables.py  durable_promise.py  durable_timers.py  error_handling.py  ingress_client.py  journaling_results.py  kafka.py  logging.py  my_service.py  my_virtual_object.py  my_workflow.py  retries.py  serialization.py  service_communication.py  serving.py  signals.py  testing.py
snippets/python/src/develop/agentsmd/: actions.py  serialization.py  testing.py
snippets/python/src/develop/skillsmd/: actions.py  error_handling.py  langchain.py  langchain_agent.py  serialization.py  testing.py
snippets/python/src/develop/workflows/: signup.py
snippets/python/src/foundations/actions/: actions.py  analytics_service.py  notification_service.py  order_workflow.py  shopping_cart_object.py  user_account.py  validation_service.py
snippets/python/src/foundations/functions/: functions.py
snippets/python/src/foundations/invocations/: client.py
snippets/python/src/foundations/services/: app.py  basic_service.py  object.py  workflow.py
snippets/python/src/guides/: retries.py
snippets/python/src/guides/sagas/: app.py
snippets/python/src/python_docs_snippets.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
snippets/python/src/services/: cancellation_example.py  configuration.py
(+1964 files in other folders)
