[project]
name = "python_docs_snippets"
version = "0.1.0"
description = "Python code snippets for documentation"
dependencies = [
    "restate_sdk[serde]==0.8.1",
    "hypercorn",
    "pydantic",
    "requests",
    "types-requests",
    "fastapi"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
