[project]
name = "python_docs_snippets"
version = "0.1.0"
description = "Python code snippets for documentation"
requires-python = ">=3.11"
dependencies = [
    "restate_sdk[serde]==0.12.0",
    "hypercorn",
    "pydantic",
    "requests",
    "types-requests",
    "fastapi",
    "openai-agents>=0.3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
